bug fix:1)report edit dropdown cut off;2)user name campatible with email

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -103,13 +103,14 @@
 
 div.main{
   position: relative; //todo absolute
+  overflow: hidden;
   width: 100%;
   height: 100%;
   border-collapse: collapse;
   border: none;
-  overflow: hidden;  //todo
   div.left-nav{
     float: left;  // todo not removed from flow
+    margin-bottom: 170px;
     min-width: 200px;
     max-width: 200px;
     vertical-align: top;
@@ -173,7 +174,6 @@ div.main{
     position: absolute; //todo removed from flow
     float:none;
     left: 200px;
-    overflow: hidden; //todo
     background: whiteSmoke;
     border-right: 1px solid #DDD;
     border-left: 1px solid #C8C8C8;
